fixxed mocked tests